ru: updated plugins and some basic notes.

--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -25,7 +25,7 @@
 - Разберитесь с тем [[Создание заметок|как создавать новые заметки]],
 - И с тем [[Внутренняя ссылка|как создавать внутренние ссылки]].
 - Попробуйте сделать [[Вложенные файлы|вложение заметок и файлов]].
-- Ознакомьтесь со стандартными [[Сочетания клавиш|сочетаниями клавиш]].
+- Ознакомьтесь со стандартными [[Горячие клавиши|сочетаниями клавиш]].
 
 ### Официальные плагины
 
