--- a/Плагины/Диктофон.md
+++ b/Плагины/Диктофон.md
@@ -1,9 +1,11 @@
-Audio recorder is a plugin that lets you make a recording without leaving Obsidian. It's useful for class and meeting notes when you can't catch up for some reason, or for recording important discussions so you don't miss any details.
+Диктофон это плагин, который позволяет делать аудио-запись, не покидая Obsidian. Он полезен для записи звука на лекциях и встречах, когда по каким-либо причинам вы не успеваете, или для записи важных дискуссий, чтобы не упустить ни одной детали.
 
-To use, simply click on the microphone icon in the left panel:
+Для использования просто нажмите на значок микрофона в левой панели:
 
 ![[Pasted image 8.png]]
 
-The microphone will become colored while it's actively recording.
+Микрофон будет окрашен красным во время записи.
 
-Click on it again to finish recording. The audio file is now saved in your [[vault]] and an embed the recording will be added to the end of your current note.
+obsidian://open
+
+Чтобы закончить запись, нажмите на него еще раз. Аудиофайл теперь сохранен в ваше хранилище, а сама запись добавлена будет добавлена в конец текущей заметки.
