--- a/Плагины/Ежедневные заметки.md
+++ b/Плагины/Ежедневные заметки.md
@@ -1,8 +1,7 @@
-Daily Notes will create a new note that is automatically named with the current date. If it already exists, it will open that note. This is a useful way to create a daily log, todo list, or a list of links to notes that you have created on a specific day.  
+Плагин Ежедневные заметки создаст новую заметку, которая будет автоматически названа текущей датой. Если такая заметка уже существует, то плагин откроет эту заметку. Это полезный способ вести ежедневный журнал, список дел или список ссылок на заметки, которые вы создали в определенный день.
 
-The date format and default folder for Daily Notes can be set in Settings => Plugins, by clicking the gear next to the name.  The default date format is "YYYY-MM-DD" (ISO format). This format means that a list of daily notes, listed in alphabetical order, will also be in chronological order. 
+Формат даты и папку по умолчанию для ежедневных заметок можно задать в Настройках на вкладке плагина Ежедневные заметки. По умолчанию используется формат даты "ГГГГГ-ММ-ДД" (формат ISO). Этот формат означает, что список ежедневных заметок, отсортированный в алфавитном порядке, будет также и в хронологическом порядке.
 
-You can also define a template file for daily notes. This file will be copied into your Daily note when it's created, so it's a good place to put tags or links you use every day.
+Вы также можете определить файл-шаблон для ежедневных заметок. Этот шаблон будет скопирован в вашу ежедневную заметку в момент создания, и это хорошее место для тегов или ссылок, которые вы используете каждый день.
 
-You can create a Daily Note either by clicking on the calendar icon in the left panel, or with the [[Палитра команд]]. You can also set a hotkey in [[Сочетания клавиш]].
-
+Ежедневную заметку можно создать щелкнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать горячую клавишу в [[Горячие клавиши|Горячих клавишах]].
