--- a/Плагины/Избранное.md
+++ b/Плагины/Избранное.md
@@ -1,5 +1,5 @@
-Starred notes are a convenient way of keeping important notes close at hand. Enabling the plugin will create a star icon on the left panel, which brings up a list of starred notes. 
+Избранное (заметки отмеченные звездочкой) – это удобный способ держать важные заметки под рукой. Включение плагина создаст на левой панели закладку со звездочкой, внутри нее будет расположен список добавленных в избранное заметок.
 
-To star a file, you have several options. You can do so from a right click in the file explorer, a click on the options menu of an open note, typing in the [[Палитра команд]], or a hotkey that can be set in [[Сочетания клавиш]].
+Чтобы добавить файл в Избранное, у вас есть несколько вариантов. Это можно сделать в файловом менеджере по правому клику на нужном файле, выбрав пункт меню «Добавить в избранное»; или через меню открытой заметки; или набрав комманду черезе [[Палитра команд|Палитру команд]]; или просто нажав горчую клавишу, которая может быть задана в [[Горячие клавиши|Горячих клавишах]]]].
 
-Starred files and searches can be reordered by dragging them around.
+Избранные файлы и поисковые запросы могут быть упорядочены путем их перетаскивания.
