--- a/Плагины/Обратные ссылки.md
+++ b/Плагины/Обратные ссылки.md
@@ -1,9 +1,9 @@
-The backlinks plugin shows how the current note is referenced in other notes.
+Плагин обратных ссылок показывает, как на текущую заметку ссылаются в других заметках. Таким образом можно отследить связи между заметками в обе стороны.
 
-After enabling it, you'll see the backlink count in the status bar.
+После включения плагина в строке состояния будет отображаться количество обратных ссылок на текущую заметку.
 
-In the right side bar (if it's expanded), you should also see a panel that shows where the current note gets linked:
+В правой боковой панели (если она развернута) вы также должны увидеть вкладку обратных ссылок, показывающую, где находятся ссылки на текущую заметку:
 
 ![[Pasted image 9.png]]
 
-Upon expanding the "Unlinked mentions" section, you can also see where the name of the note gets mentioned, but not explicitly linked (in other words, mentioned without the square brackets).
+А развернув пункт списка «Упоминания без ссылки», вы сможете увидеть, где упоминается название заметки, но ссылка не указана явно (другими словами, упоминается без квадратных скобок).
