--- a/Плагины/Открыть в приложении по умолчанию.md
+++ b/Плагины/Открыть в приложении по умолчанию.md
@@ -1,5 +1,5 @@
-Opens the current file with default app on your computer. You can access it at the top right corner of the file top bar:
+Открывает текущий файл в приложении, выбранном по умолчанию на вашем компьютере. Открытие можно вызвать в дополнительном меню в правом верхнем углу области заметки:
 
 ![[Pasted image 5.png]]
 
-It's useful for editing images or annotating PDFs, among other things.
+В частности, это удобно для редактирования изображений или аннотирования PDF-файлов.
