--- a/Плагины/Слайды.md
+++ b/Плагины/Слайды.md
@@ -1,13 +1,14 @@
-Slides lets you do simple presentations right inside Obsidian.
+Плагин Слайды позволяет делать простые презентации прямо внутри Obsidian.
 
-### Usage tips
+### Как пользоваться
 
-1. To separate slides, use newlines and the `---` separator.
-
-2. To start a presentation, click this button after opening a note:
+1. Для разделения слайдов используйте новую строку и `---` как разделитель.
+2. Чтобы начать презентацию, выберите пункт Начать презентацию в дополнительном меню в правом верхнем углу области заметки:
 
 ![[Pasted image 14.png]]
 
-### Demo
+3. Для завершения презентации слайдов нажмите `Esc`.
 
-Check out the demo document: [[Slides demo]]
+### Пример
+
+Ознакомтесь с демонстрационным документом: [[Демонстрация слайдов]]
