--- a/Плагины/Случайная заметка.md
+++ b/Плагины/Случайная заметка.md
@@ -1,3 +1,3 @@
-Random note does just that, opens a note at random from your Vault. Many people find this useful for surfacing thoughts they had not considered in a long time, or spot checking for things that they may have forgotten to link.
+Случайная заметка делает ровно то, что написано в названии – открывает случайную заметку из текущего хранилища. Многие находят это полезным для возврата к мыслям, которые они давно не рассматривали, или для точечной проверки заметок, которые они, возможно, забыли связать с другими заметками.
 
-After you enable the Random Note plugin, you can create a [[Пользовательские сочетания клавиши|custom hotkey]] that opens a note at random.
+После включения плагина Случайная заметка, вы можете задать [[Горячие клавиши|горячую клавишу]] для открытия случайной заметки.
