--- a/Плагины/Структура.md
+++ b/Плагины/Структура.md
@@ -1,1 +1,1 @@
-The outline plugin shows the list of headings for the current note, and allows you to navigate to another section by clicking on a heading.
+Плагин Структура (Outline) отображает заголовки текущей заметки списком в отдельной вкладке в правой панели, что позволяет перемещаться к соответствующей секции заметки по нажатитю на нужный заголовок.
