--- a/Плагины/Файловый менеджер.md
+++ b/Плагины/Файловый менеджер.md
@@ -1,13 +1,13 @@
-The File explorer shows [[Поддерживаемые форматы файлов|the list of files Obsidian can recognize]] in your vault. You can open notes, [[Создание заметок]] and folders, and [[Переименование заметки]] in it. Right clicking on a note or directory in the File explorer will bring up appropriate options, such as renaming or making a copy. This is also the best way to set your default folder for when you [[Вложенные файлы]].
+Файловый менеджер показывает [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]] в вашем хранилище. В нем вы можете открывать заметки, [[Создание заметок|создавать заметки]] и папки, а так же [[Переименование заметки|переименовывать их]]. Нажатие правой кнопки мыши на файле заметки или на папке в Файловом менеджере вызывает меню с соответствующими вариантами действий, такими как переименование или создание копии. Это также лучший способ установить папку по умолчанию для [[Вложенные файлы|вложенных файлов]].
 
-It's one of the crucial plugins that we recommend you to keep enabled.
+Это один из важнейших плагинов, который мы рекомендуем вам оставить включенным.
 
-### Usage tips
+### Советы по использованию
 
-1. If the list of files is cluttering the interface though, you can close it:
+1. Если список файлов все же загромождает интерфейс, то его можно свернуть:
 
 ![[Pasted image 15.png]]
 
-2. You can drag and drop to put one file into another folder.
+2. Вы можете переносить файлы в другую папку простым перетаскиванием мышью.
 
-3. You can use the sort icon at the top to sort files by file name or last modified time.
+3. Файлы можно сортировать по имени или по времени последнего изменения, если воспользоваться значком сортировки в верхней части вкладки Файлового менеджера.
