--- a/Продвинутое использование/Ранние сборки.md
+++ b/Продвинутое использование/Ранние сборки.md
@@ -1,13 +1,13 @@
-Insider builds are experimental versions of Obsidian that are released to Catalyst license owners, on an opt-in basis.
+Ранние сборки это экспирементальные версии приложения Obsidian, которые раздаются держателям лицензии Catalyst на базе подписки.
 
-Please note that insider builds are less stable than public versions, so if you prefer a smoother version, you don't have to enable it.
+Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем публичные версии, поэтому, если вы предпочитаете беспроблемную работу, вам не нужно их включать.
 
-### How to enable insider build
+### Как включить ранние сборки
 
-If you are a [[Лицензия Catalyst|Catalyst supporter]], you have access to Insider Builds before the general public. To access these, go to Settings => Account, and log in with the password you used on the Obsidian site. Then go to Settings => About, and turn on Insider Builds there.
+Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам до момента их публикации. Чтобы получть доступ к этим сборкам перейдите в Настройки =>  Учетная запись и введите пароль, используемый на сайте Obsidian. Затем перейдите в Настройки => О программе и включите пункт Получать ранние сборки.
 
 ![[Insider.png]]
 
-### Report issues
+### Как сообщить о проблеме
 
-If you're on our Discord server, you can go to the #insider-build channel to report issues. If you're filing a bug report on the forum, be sure to note the version you're using, so that we can improve it before rolling it out to everyone.
+Если вы используете наш Discord сервер, то вы можете сообщить о проблеме в канале #insider-build. Если вы сообщаете о проблеме на форум, не забудьте указать версию сборки, которую вы используете, чтобы мы могли внести испровления перед выпуском публичной версии.
