--- a/Продвинутое использование/Удаление файлов.md
+++ b/Продвинутое использование/Удаление файлов.md
@@ -1,7 +1,9 @@
-Obsidian has several options for dealing with deleted files, depending on your needs.
+У Obsidian есть несколько вариантов реализации удаления файлов для различных потребностей пользователя.
 
-- By default, deleted files are sent to your system trash. Here you can use whatever means your system has for recovering files you've accidentally deleted. 
-- Deleted files can be sent to a special `.trash` directory in your Vault. This can be useful if you want the ability to recover your Vault files separate from your system trash. 
-- You can also set obsidian to just delete files without possibility of recovery. 
+- По умолчению удаленные файлы переносятся в системную корзину. После этого вы можете использовать любые способы работы с удаленными файлами, которые предоставляет операционная система. Например, восстановить их если они были удалены по ошибке.
 
-These options can be found in Settings => File.
+- Удаленные файлы могут быть перенесены в специальную папку  `.trash` внутри текущего хранилища. Это может быть полезно если вам необходима возможность восстанавливать файлы хранилища отдельно от системной корзины.
+
+- Так же вы можете настроить Obsidian так, что файлы будут удаляться без возможности восстановления. 
+
+Вариант удаления выбирается в Настройках во вкладке Файл.
