--- a/Кастомизация/Внешний вид.md
+++ b/Кастомизация/Внешний вид.md
@@ -1,15 +1,15 @@
-### Base theme
+### Базовая тема оформления
 
-Obsidian comes with two base themes, light and dark. This option sets the default color scheme your theme will use to either display its light or dark mode version.
+Obsidian поставляется с двумя базовыми темами оформления, светлым и темным. Этот параметр устанавливает цветовую схему по умолчанию, которую ваша тема будет использовать для отображения своей версии в светлом или темном режиме.
 
-### Custom theme
+### Сторонние темы оформления
 
-There are lots of community themes contributed by our amazing community that you can easily choose from.
+Есть множество сторонних тем, созданных участниками нашего замечательного сообщества, из которых вы можете выбрать.
 
-You can easily tweak it by adding [[Добавление пользовательских CSS#Use Themes and or CSS snippets|CSS snippets]].
+Вы можете легко настроить любую тему, добавив [[Добавление пользовательских CSS#Use Themes and or CSS snippets|CSS snippets]]. %%#2do%%
 
-### Translucency
+### Полупрозрачность
 
-You can make the window translucent by enabling this option in the settings appearance tab. Currently this option is only available for Windows and macOS.
+Вы можете сделать окно приложения полупрозрачным включив этот параметр в Настройках на вкладке Оформление. В настоящий момент данный параметр доступен только для Windows и macOS.
 
-There is a known issue under Windows where dragging the window is extremely slow when translucency is enabled. This is due to a Windows bug. A Github issue tracking the status of a fix can be found here: https://github.com/riverar/sample-win32-acrylicblur/issues/2
+В Windows существует известная проблема, когда перетаскивание окна происходит чрезвычаной медленно, если включена полупрозрачность. Это происходит из-за ошибки Windows. Отслеживать статус исправления проблемы можно в GitHub по ссылке: https://github.com/riverar/sample-win32-acrylicblur/issues/2 %%#2do%%
