--- a/Плагины/Быстрый переход.md
+++ b/Плагины/Быстрый переход.md
@@ -1,8 +1,7 @@
-The Quick switcher lets you jump to other notes without leaving your keyboard. The shortcut to invoke it is `Ctrl/Cmd+O`. Just start typing, and matching filenames will be selected. Use up and down arrows to navigate the results, `Enter` to jump to a result, and  `Esc` to exit the quick switcher. Holding down `Cmd/Ctrl` will cause the note to open in a new pane. 
+Быстрый переход позволяет переключаться на другие заметки не убирая рук с клавиатуры. Для вызова используется горячая клавиша `Ctrl/Cmd+O`. Просто начните вводить название заметки в появившемся диалоговом окне и плагин предложит подходящие имена файлов. Используйте стрелки вверх и вниз для навигации по результатам, `Enter` – для перехода к результату, и `Esc` – для выхода из быстрого перехода. Удержание `Cmd/Ctrl` при выборе приведет к открытию заметки в новой области. 
 
-If you want to create a new note, typing a unique name will cause the Quick Switcher to create it. If the name is similar enough to an existing note, the Quick Switcher will default to opening the original note. To avoid this, holding down `shift` will force creation of a new note with whatever name is in the Quick Switcher. This can be combined with `Cmd/Ctrl` to create the new note in a new pane. 
+Если вы хотите создать новую заметку, то достаточно ввести уникальное имя заметки в диалоговом окне Быстрого перехода. Если имя схоже с существующей заметкой, Быстрый переход по умолчанию откроет исходную заметку. Если удерживать `Shift` при выборе, то новая заметка будет создана с любым заданным именем. Клавишу `Shift` можно нажимать совместно с `Cmd/Ctrl` для создания новой заметки в новой области интерфейса. %%#2do%%
 
 ![[Pasted image 11.png]]
 
-Before you enter anything, the top 5 most recently visited notes will be shown, so it's also useful to quickly switch two notes by doing `Ctrl/Cmd+O` → `Down arrow` → `Enter`.
-
+Сразу при открытии диалогового окна и до какого-либо ввода будут показаны 5 самых последних открытых заметок. Это полезно для переключения, например, к прошлой заметке последовательностью клавиш `Ctrl/Cmd+O` → `Стрелка вниз` → `Enter`.
