--- a/Плагины/Восстановление файлов.md
+++ b/Плагины/Восстановление файлов.md
@@ -1,42 +1,44 @@
-File recovery is a core plugin to help you recover your data in case of all kind of accidents - user error, power outage, or misbehaving plugins and scripts.
+Восстановление файлов это основной плагин, который поможет вам восстановить ваши данные в случае любой аварийной ситуации – ошибка пользователя, отключение электропитания, или неправильная работы плагина или скрипта.
 
-File recovery is default to enabled, because it's too late to enable when you've already lost data.
+Плагин Восстановление файлов по умолчанию включен, так как включать его после потери данных будет уже слишком поздно.
 
-## How it works
+## Как это работает
 
-### Snapshots
+### Снимки файлов
 
-As long as this plugin is enabled, full snapshots of what you're working on get saved at fixed intervals (you can configure this interval). Snapshots get deleted after a fixed amount of retention time.
+Пока данный плагин включен, полные снимки того, над чем вы работаете, сохраняются через фиксированные промежутки времени (вы можете задать этот интервал). Снимки удаляются по истечении определенного времени хранения.
 
-This process is automatic. By default, snapshots are made every 5 minutes, and snapshots are kept for 7 days.
+Данный процесс автоматизирован. По умолчанию снимки данных создаются каждые 5 минут и хранятся в течение 7 дней.
 
-### Recovering
+==Снимки файлов делаются только для Markdown-файлов.==
 
-In case of data loss, here's how you can find saved snapshots:
+### Восстановление
 
-1. Open settings;
-2. Open the "File recovery" tab under "Plugin options";
-3. Click on the "View" button in "Snapshots" section;
-4. In the search bar on the left, enter the name of file you want to recover. If the file name does not show it, it means no snapshots were saved for that file;
-5. After selecting a file in the dropdown, a list of snapshots will appear on the left. Select the one you want to recover;
-6. The content of that snapshot will show up on the right. You can click "Copy to clipboard" to copy the whole thing, or cherry-pick some of the content.
+В случае потери данных вы можете воспользоваться следующей инструкцией, чтобы найти сохраненные снимки:
 
-## Options
+1. Откройте Настройки;
+2. Откройте вкладку плагина Восстановление файлов;
+3. Нажмите на кнопку Обзор в подразделе Снимки;
+4. В открывшемся окне, в строке поиска слева, введите имя файла, который вы хотите восстановить. Если имя файла не отображается, это означает, что для этого файла не было сделано сников;
+5. После выбора нужного файла с левой стороны будет отображаться список сделанных снимков по дате. Выберите тот, который хотите восстановить;
+6. Содержимое снимка будет отображаться с правой стороны окна. Вы можете выбрать  для копирования какую-либо его часть или нажать на кнопку Скопировать в буфер обмена (Copy to clipboard) чтобы скопировать его содержимое целиком.
 
-### Snapshot interval
+## Настройки
 
-Minimal number of minutes between two snapshots. Default is 5 minutes.
+### Интервал создания снимков
 
-### History length
+Минимальный интервал между созданием снимков, по умолчанию – 5 минут. 
 
-Number of days to keep snapshots around for. Default is 7 days.
+### История хранения снимков
 
-### Clear history
+Приод хранения снимков в днях. По умолчанию снимки хранятся 7 дней.
 
-You also have the option to wipe all history. ==Please be careful as this action is irreversible.==
+### Очистка истории снимков
 
-## Data storage
+Вы можете удалить все снимки данных. ==Пожалуйста, будьте осторожны, так как это действие необратимо.==
 
-The file recovery data is stored in [[Как Obsidian хранит данные#System directory|system directory]] in case of vault malfunctioning.
+## Хранение данных
 
-Please note that vaults are identified by their absolute path. If you've moved vault, you will need to move it back to its previous position in order to restore the snapshots while the vault was there.
+Снимки данных хранятся в [[Как Obsidian хранит данные#Системная папка|системной папке]] на случай неисправности хранилища.
+
+Обратите внимание, что хранилища идентифицируются по их абсолютному пути. Если вы переместили хранилище, вам нужно будет переместить его обратно в предыдущее место, чтобы восстановить снимки, которые были сделаны на момент, пока хранилище было там.
