--- a/Плагины/Палитра команд.md
+++ b/Плагины/Палитра команд.md
@@ -3,6 +3,6 @@
 Собственные сочетания клавиш для Палитры команд можно задавать  через меню Настройки -> Сочетания клавиш. Нажмите на иконку `*` справа от команды и введите любую угодную вам комбинацию клавиш.
 
 ### Советы по использованию
-- Для просмотра полного списка команд не надо ничего набирать. Стрелки позволяют передвигаться по палитре вверх и вниз, а клавиша `Ввод ↩` активирует команду.
+- Для просмотра полного списка команд не надо ничего набирать. Стрелки позволяют передвигаться по палитре вверх и вниз, а клавиша `Enter` активирует команду.
 
 - В Палитре команд используется нечеткий поиск, так что можно писать часть слова для получения списка совпадений. Например можно написать `иввф` для поиска команды `Искать во всех файлах`.
