--- a/Плагины/Панель тегов.md
+++ b/Плагины/Панель тегов.md
@@ -1,23 +1,23 @@
-Adds a panel on the right that displays all the tags you have, along with their tag count.
+Добавляет на правую панель отдельную вкладку, на которой отображаются все имеющиеся у вас теги, а также их количество.
 
-When clicking on a tag, a search for the tag is activated. To ==toggle a tag== in search, Ctrl-click it instead.
+При нажатии на тег активируется поиск по этому тегу. Для удаления тега или добавления в поиск дополнительного тега, нажмите на него удерживая `Ctrl/Cmd`.
 
-### Sorting
+### Сортировка
 
-The tags are sorted from mostly frequently used to least frequently used. You can change the sort order to alphabetical or reverse it.
+По умолчанию тэги отсортированы по убыванию частоты использования тега. Вы можете переключиться на сортировку по алфавиту или изменить направление сортировки.
 
-### Nested tags
+### Вложенные теги
 
-If you write your tags like `#inbox/to-read` and `#inbox/processing`, you can enable "show nested tags" to view them as a tree instead of a flat list.
+Если вы напишите название тегов в формате `#inbox/to-read` и `#inbox/processing`, вы сможете включить отображение вложенных тегов в виде древовидного спика, а не просто плоского. 
 
-Under the default flat view, the tag pane will look like:
+В режиме отображения плоского списка, панель тегов выглядит следующим образом:
 
 ```
 - inbox/to-read
 - inbox/processing
 ```
 
-Under the nested tag view, the tag pane will look like:
+А в режиме древовидного списка, панель тегов выглядит так:
 
 ```
 - inbox
