--- a/Плагины/Предпросмотр страницы.md
+++ b/Плагины/Предпросмотр страницы.md
@@ -1,5 +1,5 @@
-Page preview lets you preview a page when hovering an internal link, without needing to actually navigate to that page.
+Предварительный просмотр страницы позволяет просматривать страницу при наведении курсора на внутреннюю ссылку без необходимости фактического перехода на эту страницу.
 
 ![[Pasted image 13.png]]
 
-This works on the preview pane. In the editor, you can hover a link while holding `Ctrl/Cmd`, which will open the preview too.
+Это работает в области просмотра. В области редакторивания это тоже возможно, если навести курсор на ссылку удерживая нажатой клавишу `Ctrl/Cmd`, появится окно предпросмотра.
