--- a/Плагины/Список плагинов.md
+++ b/Плагины/Список плагинов.md
@@ -1,8 +1,8 @@
-One of the most powerful aspects of Obsidian is the ability to add new functionality via plugins. It comes with several already, and many more are in development.
+Одним из самых мощных аспектов использования Obsidian является возможность добавления новой функциональности через плагины. Несколько плагинов ставятся вместе с приложением, многие другие находятся в разработке. 
 
-You can also build your own Obsidian plugin. See [[Сторонние плагины]].
+Вы сможете создать свой собственный плагин. См. [[Сторонние плагины#For developers|сторонние плагины]].
 
-Plugins can be managed through the "Settings" button on the bottom left. Some of them have settings of their own that can be configured by clicking on the gear that appears next to each plugin when it is activated. 
+Управлять плагинами можно через меню Настройки, которое можно вызвать в нижней части левой панели. Некоторые из плагинов имеются свои отдельные настройки, которые могут быть заданы в соответсвующей вкладке, которая появляется в Настройках после включения плагина.
 
 ### Текущий список официальных плагинов
 
