--- a/Плагины/Счетчик слов.md
+++ b/Плагины/Счетчик слов.md
@@ -1,3 +1,3 @@
-Word count is a simple plugin that shows the word count of your current note in the bottom status bar.
+Счетчик слов – это простой плагин, который показывает в нижней строке состояния количество слов в текущей заметке.
 
-It works for CJK characters too (Chinese, Japanese, and Korean), in which words are not separately by spaces but rather glued together.
+Он работает и для иероглифов CJK (китайских, японских и корейских), в которых слова не отделяются пробелами, а склеиваются.
