--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -287,7 +287,7 @@ First Header | Second Header
 
 First Header | Second Header
 ------------ | ------------
-[[Форматирование заметок\|Formatting]]	|  [[Сочетания клавиш\|hotkeys]]	
+[[Форматирование заметок\|Formatting]]	|  [[Горячие клавиши\|hotkeys]]	
 
 ---
 
