Форматирование заметок - done

--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -1,208 +1,206 @@
+Obsidian это приложение для ведения заметок и базы знаний на основе Markdown-файлов.
 
-Obsidian is a Markdown-based note-taking and knowledge base app. 
-
-We currently support the formats below:
-
----
-
-### Internal linking
-
-```md
-Link to a page: [[Internal link]].
-```
-
-Link to a page: [[Внутренняя ссылка]].
+На данный момент поддерживаются следующие элементы форматирования:
 
 ---
 
-### Embeds
-
-Embed another file (read more about [[Вложенные файлы]]). Here's an embedded section:
+### Внутренние ссылки
 
 ```md
-![[Obsidian#What is Obsidian]]
+Ссылка на страницу: [[Внутренняя ссылка]].
 ```
 
-![[Obsidian#What is Obsidian]]
+Ссылка на страницу: [[Внутренняя ссылка]].
 
 ---
 
-### Headers
+### Вложенные файлы
+
+Вложение файла или заметки (узнать больше о [[Вложенные файлы|Вложенных файлах]]). Далее показан пример вложения раздела заметки об Obsidian:
 
 ```md
-# This is a heading 1
-## This is a heading 2
-### This is a heading 3 
-#### This is a heading 4
-##### This is a heading 5
-###### This is a heading 6
+![[Obsidian#Что такое Obsidian]]
 ```
 
-# This is a heading 1
-## This is a heading 2
-### This is a heading 3 
-#### This is a heading 4
-##### This is a heading 5
-###### This is a heading 6
+![[Obsidian#Что такое Obsidian]]
 
 ---
 
-### Emphasis
+### Заголовки
 
 ```md
-*This text will be italic*
-_This will also be italic_
+# Это заголовок 1
+## Это заголовок 2
+### Это заголовок 3
+#### Это заголовок 4
+##### Это заголовок 5
+###### Это заголовок 6
 ```
 
-*This text will be italic*
-_This will also be italic_
-
-```md
-**This text will be bold**
-__This will also be bold__
-```
-
-**This text will be bold**
-__This will also be bold__
-
-```md
-_You **can** combine them_
-```
-
-_You **can** combine them_
+# Это заголовок 1
+## Это заголовок 2
+### Это заголовок 3
+#### Это заголовок 4
+##### Это заголовок 5
+###### Это заголовок 6
 
 ---
 
-### Lists
+### Выделение
 
 ```md
-- Item 1
-- Item 2
-  - Item 2a
-  - Item 2b
-
-1. Item 1
-1. Item 2
-1. Item 3
-   1. Item 3a
-   1. Item 3b
+*Этот текст отобразится курсивом*
+_Этот текст отобразится курсивом_
 ```
 
-- Item 1
-- Item 2
-  - Item 2a
-  - Item 2b
+*Этот текст отобразится курсивом*
+_Этот текст отобразится курсивом_
 
-1. Item 1
-1. Item 2
-1. Item 3
-   1. Item 3a
-   1. Item 3b
+```md
+**Этот текст будет выделен жирным шрифтом**
+__Этот текст тоже будет выделен жирным шрифтом__
+```
+
+**Этот текст будет выделен жирным шрифтом**
+__Этот текст тоже будет выделен жирным шрифтом__
+
+```md
+_Их **можно** комбинировать_
+```
+
+_Их **можно** комбинировать_
+
+---
+
+### Списки
+
+```md
+- Предмет 1
+- Предмет 2
+  - Предмет 2a
+  - Предмет 2b
+
+1. Предмет 1
+1. Предмет 2
+1. Предмет 3
+   1. Предмет 3a
+   1. Предмет 3b
+```
+
+- Предмет 1
+- Предмет 2
+  - Предмет 2a
+  - Предмет 2b
+
+1. Предмет 1
+1. Предмет 2
+1. Предмет 3
+   1. Предмет 3a
+   1. Предмет 3b
 
 --- 
 
-### Images
+### Изображения
 
 ```md
-![Engelbart](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
+![Энгельбарт](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
 ```
 
-![Engelbart](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
+![Энгельбарт](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
 
-#### Resizing images
+#### Изменение размера изображений
 
-Example of this above image resized to 100 pixels wide:
+Пример уменьшения размера верхнего изображения до 100 пикселей в ширину:
 
 ```md
-![Engelbart|100](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
+![Энгельбарт|100](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
 ```
 
-![Engelbart|100](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
+![Энгельбарт|100](https://history-computer.com/ModernComputer/Basis/images/Engelbart.jpg)
 
 ---
 
-### Links
+### Ссылки
 
-#### External links
+#### Внешние ссылки
 
-Markdown style links can be used to refer to either external objects, such as web pages, or an internal page or image.
+Ссылки типа Markdown можно использовать как для ссылки на внешние объекты вроде веб страниц, так и на внутренние страницы или изображения.
 
 ```md
-http://obsidian.md - automatic!
+http://obsidian.md - создаются автоматически!
 [Obsidian](http://obsidian.md)
 ```
 
-http://obsidian.md - automatic!
+http://obsidian.md - создаются автоматически!
 [Obsidian](http://obsidian.md)
 
-#### Obsidian URI links
+#### Obsidian URI-ссылки
 
-[[Использование протокола URI|Obsidian URI]] links can be used to open notes in Obsidian either from another Obsidian vault or another program.
+В Obsidian [[Использование протокола URI|URI-ссылки]] могут использоваться для открытия заметок из текущего хранилища, из другого хранилища или других программ.
 
-For example, you can link to a file in a vault like so (please note the [[Использование протокола URI#Encoding|required encoding]]):
-
-```md
-[Link to note](obsidian://open?path=D:%2Fpath%2Fto%2Ffile.md)
-```
-
-[Link to note](obsidian://open?path=D:%2Fpath%2Fto%2Ffile.md)
-
-You can link to a note by its vault name and file name instead of path as well:
+Например, вы можете вставить ссылку на файл в хранилище таким образом (обратите внимание на [[Использование протокола URI#Encoding|обязательную кодировку]]):
 
 ```md
-[Link to note](obsidian://open?vault=MainVault&file=MyNote.md)
+[Ссылка на файл](obsidian://open?path=D:%2Fpath%2Fto%2Ffile.md)
 ```
 
-[Link to note](obsidian://open?vault=MainVault&file=MyNote.md)
+[Ссылка на файл](obsidian://open?path=D:%2Fpath%2Fto%2Ffile.md)
 
-#### Escaping
-
-If there are spaces in the url, they can be escaped by either using `%20` as a space, such as:
+Вы так же можете вставить ссылку на файл указав имя хранилища и имя файла, без полного пути до него:
 
 ```md
-[Export options](Pasted%20image)
+[Ссылка на файл](obsidian://open?vault=MainVault&file=MyNote.md)
 ```
 
-[Export options](Pasted%20image)
+[Ссылка на файл](obsidian://open?vault=MainVault&file=MyNote.md)
 
-Or you can enclose the target in `<>`, such as:
+#### Экранирование
+
+Если в ссылках есть пробелы, они могут быть экранированы. Например, пробел можно заменить на код `%20`:
 
 ```md
-[Slides Demo](<Slides Demo>)
+[Импорт данных](Импорт%20данных)
 ```
 
-[Slides demo](Slides%20demo.md Demo>)
+[Импорт данных](Импорт%20данных)
+
+Или заключить цель в скобки `<>`:
+
+```md
+[Ссылка на блоки](<Ссылка на блоки>)
+```
+
+[Ссылка на блоки](<Ссылка на блоки>)
 
 ---
 
-### Blockquotes
+### Цитирование
 
 ```md
-> Human beings face ever more complex and urgent problems, and their effectiveness in dealing with these problems is a matter that is critical to the stability and continued progress of society.
+> Люди сталкиваются со все более сложными и неотложными проблемами, и их эффективность в решении этих проблем имеет решающее значение для стабильности и дальнейшего прогресса общества.
 
-\- Doug Engelbart, 1961
+\- Дуглас Энгельбарт, 1961
 ```
 
-> Human beings face ever more complex and urgent problems, and their effectiveness in dealing with these problems is a matter that is critical to the stability and continued progress of society.
+> Люди сталкиваются со все более сложными и неотложными проблемами, и их эффективность в решении этих проблем имеет решающее значение для стабильности и дальнейшего прогресса общества.
 
-\- Doug Engelbart, 1961
+\- Дуглас Энгельбарт, 1961
 
 ---
 
-### Inline code
+### Встроенный код
 
 ```md
-Text inside `backticks` on a line will be formatted like code.
+Текст внутри `обратных кавычек` в строке будет отображаться как код. 
 ```
 
-Text inside `backticks` on a line will be formatted like code. 
-
+Текст внутри `обратных кавычек` в строке будет отображаться как код. 
 
 ---
 
-### Code blocks
+### Блоки кода
 
-Syntax highlight is supported with the language specified after the first set of backticks. We use prismjs for syntax highlighting, a list of supported languages can be found [at their site](https://prismjs.com/#supported-languages)
+Подсветка синтаксиса поддерживается путем указания языка после первых трех обратных кавычек. Для подсветки мы используем prismjs, список поддерживаемых языков можно найти [на их сайте](https://prismjs.com/#supported-languages).
 
 <pre><code>```js
 function fancyAlert(arg) {
@@ -218,134 +216,134 @@ function fancyAlert(arg) {
     $.facebox({div:'#foo'})
   }
 }
+```  
+
+```md
+	Текст с отступом, сделанным с помощью табуляции, будет
+	выглядеть как блок кода в области просмотра.
 ```
+
+	Текст с отступом, сделанным с помощью табуляции, будет выглядеть как блок кода в области просмотра. 
     
-	
-```md
-    Text indented with a tab is formatted like this, and will also look like a code block in preview. 
-```
-
-    Text indented with a tab is formatted like this, and will also look like a code block in preview. 
-    
 ---
 
-### Task list
+### Список задач
 
 ```md
-- [x] #tags, [links](), **formatting** supported
-- [x] list syntax required (any unordered or ordered list supported)
-- [x] this is a complete item
-- [ ] this is an incomplete item
-- [ ] tasks can be clicked in Preview to be checked off
+- [x] поддерживаются #теги, [ссылки](), **форматирование**
+- [x] требуется синтаксис списка (поддерживаются упорядоченный или не упорядоченный списки)
+- [x] это выполненная задача
+- [ ] это не выполненная задача
+- [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
 ```
 
-- [x] #tags, [links](), **formatting** supported
-- [x] list syntax required (any unordered or ordered list supported)
-- [x] this is a complete item
-- [ ] this is an incomplete item
-- [ ] tasks can be clicked in Preview to be checked off
+- [x] поддерживаются #теги, [ссылки](), **форматирование**
+- [x] используется синтаксис списка (поддерживаются упорядоченный или не упорядоченный списки)
+- [x] это выполненная задача
+- [ ] это не выполненная задача
+- [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
 
 ---
 
-### Tables
+### Таблицы
 
-You can create tables by assembling a list of words and dividing them with hyphens `-` (for the first row), and then separating each column with a pipe `|`:
+Вы можете создавать таблицы из списков слов. Шапка таблицы (первая строка) отделяется от остальных строк дефисами `-`. Столбцы разделяются вертикальной чертой `|`:
 
 ```md
-First Header | Second Header
+Первый заголовок | Второй заголовок
 ------------ | ------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
+Первый заголовок | Содержимое второй ячейки
+Содержимое первой колонки | Содержимое второй колонки
 ```
 
-First Header | Second Header
+Первый заголовок | Второй заголовок
 ------------ | ------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
+Первый заголовок | Содержимое второй ячейки
+Содержимое первой колонки | Содержимое второй колонки
 
 ---
 
 ```md
-Tables can be justified with a colon | Another example with a long title
-:----------------|-------------:
-because of the `:` | these will be justified
-
-If you put links in tables, they will work, but if you use Piped Links, the pipe must be escaped with a `\` to prevent it being read as a table element.
+В таблицах поддерживается выравнивание | Еще один пример заголовка
+:------------|------------:
+с использованием двоеточия `:` | будет выровнено
 ```
 
-Tables can be justified with a colon | Another example with a long title
-:----------------|-------------:
-because of the `:` | these will be justified
+В таблицах поддерживается выравнивание | Пример выравнивания
+:------------|------------:
+по краю с использованием двоеточия `:` | по правому краю
 
-If you put links in tables, they will work, but if you use Piped Links, the pipe must be escaped with a `\` to prevent it being read as a table element.
+В таблицах работаю ссылки. Если в ссылке используется вертикальная черта,  она должна быть изолирована символом  `\`, чтобы не быть распознанной как элемент таблицы .
 
 ```md
-First Header | Second Header
+Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Format your notes\|Formatting]]	|  [[Keyboard shortcuts\|hotkeys]]
+[[Форматирование заметок\|Форматирование]]	|  [[Сочетание клавиш\|Горячие клавиши]]
 ```
 
-First Header | Second Header
+Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Форматирование заметок\|Formatting]]	|  [[Горячие клавиши\|hotkeys]]	
+[[Форматирование заметок\|Форматирование]]	|  [[Сочетание клавиш\|Горячие клавиши]]
 
 ---
 
-### Strikethrough
+### Зачеркивание
 
 ```md
-Any word wrapped with two tildes (like ~~this~~) will appear crossed out.
+Любой текст заключенный в двойные тильды (например, ~~так~~) будет отображаться как зачеркнутый.
 ```
 
-Any word wrapped with two tildes (like ~~this~~) will appear crossed out.
+Любой текст заключенный в двойные тильды (например, ~~так~~) будет отображаться как зачеркнутый.
 
 ---
 
-### Highlighting
+### Подсветка
 
 ```md
-Use two equal signs to ==highlight text==.
+Используя двойные знаки равенства можно ==подсветить текст==.
 ```
 
-Use two equal signs to ==highlight text==.
+Используя двойные знаки равенства можно ==подсветить текст==.
 
 ---
 
-### Footnotes
+### Сноски
 
 ```md
-Here's a simple footnote,[^1] and here's a longer one.[^bignote]
+Пример простой сноки[^1] и пример сноски подлинее[^большая сноска].
 
-[^1]: meaningful!
+[^1]: со смыслом!
 
-[^bignote]: Here's one with multiple paragraphs and code.
+[^большая сноска]: с несколькими абзацами и кодом.
 
-    Indent paragraphs to include them in the footnote.
+    Делайте отступ перед абзацем чтобы включить его в сноску.
 
-    `{ my code }`
+    `{ мой код }`
 
-    Add as many paragraphs as you like.
+    Абзацев может быть сколько угодно.
 ```
 
-Here's a simple footnote,[^1] and here's a longer one.[^bignote]
+Пример простой сноки[^1] и пример сноски подлинее.[^большая_сноска]
 
-[^1]: meaningful!
+[^1]: со смыслом!
 
-[^bignote]: Here's one with multiple paragraphs and code.
+[^большая_сноска]: с несколькими абзацами и кодом.
 
-    Indent paragraphs to include them in the footnote.
+	Делайте отступ перед абзацем чтобы включить его в сноску.
+	`{ мой код }`
+	Абзацев может быть сколько угодно.
 
-    `{ my code }`
-
-    Add as many paragraphs as you like.
-	
 ```md
-You can also use inline footnotes. ^[notice that the carat goes outside of the brackets on this one.]
+Сноски также можно оставлять прямо в тексте.^[обратите внимание, что карет `^` при этом выносится за скобки.]
 ```
 
-You can also use inline footnotes. ^[notice that the carat goes outside of the brackets on this one.]
+Сноски также можно оставлять прямо в тексте.^[обратите внимание, что карет `^` при этом выносится за скобки.]
 
-### Math
+### Математические формулы
+
+Вы можете добавлять в текст математические формулы.
+
+Для отображения формулы в отдельном блоке, необходимо заключить ее в двойные `$$`:
 
 ```md
 $$\begin{vmatrix}a & b\\
@@ -357,80 +355,84 @@ $$\begin{vmatrix}a & b\\
 c & d
 \end{vmatrix}=ad-bc$$
 
-You can also do inline math like $e^{2i\pi} = 1$ .
+```md
+Так же возможно отображение формулы внтури строки $e^{2i\pi} = 1$.
+```
 
-Obsidian uses [Mathjax](http://docs.mathjax.org/en/latest/basic/mathjax.html). You can check which packages are supported in Mathjax [here](http://docs.mathjax.org/en/latest/input/tex/extensions/index.html).
+Так же возможно отображение формулы внтури строки $e^{2i\pi} = 1$.
 
-### Comments
+Obsidian использует библиотеку [Mathjax](http://docs.mathjax.org/en/latest/basic/mathjax.html) для отображения математических формул. Вы можете ознакомиться со списком расширений поддерживаемых в Mathjax [тут](http://docs.mathjax.org/en/latest/input/tex/extensions/index.html).
 
-Use `%%` to enclose comments, which will be parsed as Markdown, but will not show up in the preview.
+### Комментарии
+
+Используйте двойные `%%` для вложения комментариев, которые будут распознаны как Markdown-текст, но не будут показаны в режиме просмотра.
 
 ```md
-Here is some inline comments: %%You can't see this text%% (Can't see it)
+Комментарий внутри текста: %%скрытый комментарий%% (который, не виден в режиме просмотра)
 
-Here is a block comment:
+Скрытый блок с комментариями: (который, так же не виден в режиме просмотра)
 %%
-It can span
-multiple lines
+Он может содержать
+множество строк
 %%
 ```
 
-Here is some inline comments: %%You can't see this text%% (can't see it in preview)
+Комментарий внутри текста: %%скрытый комментарий%% (который, не виден в режиме просмотра)
 
-Here is a block comment: (can't see it in preview either)
+Скрытый блок с комментариями: (который, так же не виден в режиме просмотра)
 %%
-It can span
-multiple lines
+Он может содержать
+множество строк
 %%
 
-### Diagram
+### Диаграммы
 
-Obsidian uses [Mermaid](https://mermaid-js.github.io/) to render diagrams and charts. Mermaid also provides [a helpful live editor](https://mermaid-js.github.io/mermaid-live-editor).
+Obsidian использует библиотеку [Mermaid](https://mermaid-js.github.io/) для отображения диаграмм и схем. У Mermaid есть удобный [«живой редактор»](https://mermaid-js.github.io/mermaid-live-editor).
 
 <pre><code>```mermaid
 sequenceDiagram
-    Alice->>+John: Hello John, how are you?
-    Alice->>+John: John, can you hear me?
-    John-->>-Alice: Hi Alice, I can hear you!
-    John-->>-Alice: I feel great!
+    Алиса->>+Иван: Привет Иван, как ты?
+    Алиса->>+Иван: Иван, ты меня слышишь?
+    Иван-->>-Алиса: Привет Алиса, я тебя слышу!
+    Иван-->>-Алиса: Я чувствую себя отлично!
 ```</code></pre>
 
 ```mermaid
 sequenceDiagram
-    Alice->>+John: Hello John, how are you?
-    Alice->>+John: John, can you hear me?
-    John-->>-Alice: Hi Alice, I can hear you!
-    John-->>-Alice: I feel great!
+    Алиса->>+Иван: Привет Иван, как ты?
+    Алиса->>+Иван: Иван, ты меня слышишь?
+    Иван-->>-Алиса: Привет Алиса, я тебя слышу!
+    Иван-->>-Алиса: Я чувствую себя отлично!
 ```
 
-Obsidian supports linking to notes in Mermaid:
+Obsidian поддерживает ссылки на заметки внутри элементов Mermaid:
 <pre><code>```mermaid
 graph TD
 
-Biology --> Chemistry
+Биология --> Химия
 
-class Biology,Chemistry internal-link;
+class Биология,Химия internal-link;
 ```</code></pre>
 
-An easier way to do it is the following: ^376b9d
+Второй, но более простой способ: ^376b9d
 <pre><code>```mermaid
 graph TD
 
-A[Biology]
-B[Chemistry]
+A[Биология]
+B[Химия]
 
 A --> B
 
 class A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z internal-link;
 ```</code></pre>
 
-This way, all the note names (at least until `Z[note name]`) are all automatically assigned the class `internal-link` when you use this snippet.
+Таким образом, все имена заметок (по крайней мере до `Z[имя заметки]`) автоматически присваиваются к классу `internal-link` при использовании этого фрагмента.
 
-If you use special characters in your note names, you need to put the note name in double quotes.
-`"⨳ special character"`
-It looks like this if you follow the [[Форматирование заметок#^376b9d|second option]]:
+Если вы используете специальные символы в названиях заметок, то вам нужно заключать их в двойные кавычки:
+`"⨳ специальный символ"`
+Во [[Форматирование заметок#^376b9d|втором способе]] это делается следующим образом:
 `A["⨳ special character"]`
 
-## Developer notes
+## Примечания разработчика
 
-We strive for maximum capability without breaking any existing formats, therefore we use a slightly unorthodox combination of flavors of markdown. It is broadly CommonMark, with the addition of some functionality from GitHub Flavored Markdown (GFM), some latex support, and our chosen embed syntax, which you can read more about at [[Поддерживаемые форматы файлов]].
+Мы стараемся соблюсти максимальную совместимость не нарушая существующие форматы, поэтому мы используем слегка необщепринятый комбинацию разновидностей Markdown. В общих чертах это CommonMark с добавлением некоторых возможностей из GitHub Flavored Markdown (GFM), с частичной поддержкой LaTeX и выбранным нами синтаксисом для вложений, о котором можно почитать тут: [[поддерживаемые форматы файлов]].
