--- a/Плагины/Случайная заметка.md
+++ b/Плагины/Случайная заметка.md
@@ -1,3 +1,3 @@
 Случайная заметка делает ровно то, что написано в названии – открывает случайную заметку из текущего хранилища. Многие находят это полезным для возврата к мыслям, которые они давно не рассматривали, или для точечной проверки заметок, которые они, возможно, забыли связать с другими заметками.
 
-После включения плагина Случайная заметка, вы можете задать [[Горячие клавиши|горячую клавишу]] для открытия случайной заметки.
+После включения плагина Случайная заметка, вы можете задать [[Сочетание клавиш|горячую клавишу]] для открытия случайной заметки.
